<resources>
    <string name="app_name">Inventory App</string>

    <string name="add_button">Add book</string>

    <string name="save_btn">Save</string>

<!--Hints  for exit text in editor activity-->
    <string name="hint_product_name">Product name</string>
    <string name="hint_price">Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_phone">Supplier Phone Number</string>

</resources>
